--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,71 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+body{
+    width: 100%;
+    box-sizing: border-box;
+    background-color: rgb(10, 6, 53);
+}
 .currency_box{
-    width: 20%;
-    height: 50vh;
+    color: rgb(0, 0, 0);
+    width: 30%;
+    background-color: rgb(255, 255, 255);
     margin: auto;
+    margin-top: 20%;
+    padding: 10px;
+    border-radius: 6px;
+}
+h4{
+    text-align: center;
+    font-size: 19px;
+    font-weight: bold;
+    padding-top: 20px;
+    padding-bottom: 15px;
+}
+.selection{
+    margin-top: 10px;
+    font-weight: bold;
+}
+.selection-one{
+    display: inline-block;
+    
+}
+.selection-two{
+    display: inline-block;
+    margin-top: 10px;
+}
+select{font-size: 14px;}
+#btn{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-top: 15px;
+}
+button{
+    font-weight: bold;
+    background-color: rgb(215, 177, 37);
+    padding: 9px;
+    border-radius: 5px;
+    outline: none;
+    border: none;
+}
+button:hover{
+    background-color: rgb(121, 209, 14);
+}
+.result_conversion_box{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+.result{
+    padding: 7px 5px 7px 5px ;
+    min-width: 100px;
+    border-radius: 5px;
+    background-color: crimson;
+    font-size: 17px;
+    text-align: center;
+    margin-top: 20px;
+    margin-left: 10px;
+    display: none;
 }
